# StringArtOnFPGA

./: README.md  image_5_5_ein.txt  imageimage_5_5_ein2.txt  imagepeace.txt
HPS_Code/: art-machine  art-machine-old  data.txt  graphics_video_16bit.c  graphics_video_16bit.cpp  pin_pos.txt
HPS_Code/ImageProcessing/: CMakeLists.txt  Example_config.txt  README.md
HPS_Code/ImageProcessing/include/: config.h  imageProcessor.h  matrixGenerator.h  status.h
HPS_Code/ImageProcessing/src/: config.cpp  imageProcessor.cpp  matrixGenerator.cpp  test.cpp
Paper_MATLABCode/: Bresenham_Solver.sv  Bresenham_tb.sv  ImageInitScript.m  Links.docx  addremove_oneiter.m  data.txt  findstrings.m  imagepeace.txt  pinPosDeterm.m  read.m  stringArt_custom.m  turing.txt
Pictures/: VGASS.psd
Website/: logicalstructure.vsdx  overallsystem.vsdx
app_software_arm_asm/: address_map_arm.s
app_software_nios2_C/: address_map_nios2.h
app_software_nios2_asm/: address_map_nios2.s
verilog/: Add_Remove_Search.sv  Add_Remove_Search.sv.bak  Add_Remove_Search_tb.sv  Bresenham_Solver.sv  Bresenham_Solver.sv.bak  Bresenham_tb.sv  Computer_System.qsys  Computer_System.sopcinfo.xml  Count_memory.v  Count_memory.v.bak  DE1_SoC_Computer.asm.rpt  DE1_SoC_Computer.cdf  DE1_SoC_Computer.done  DE1_SoC_Computer.fit.rpt  DE1_SoC_Computer.fit.summary  DE1_SoC_Computer.flow.rpt  DE1_SoC_Computer.jdi  DE1_SoC_Computer.map.smsg  DE1_SoC_Computer.map.summary  DE1_SoC_Computer.merge.rpt  DE1_SoC_Computer.merge.summary  DE1_SoC_Computer.pin  DE1_SoC_Computer.pti_db_list.ddb  DE1_SoC_Computer.qsf  DE1_SoC_Computer.qws  (+19 more)
(+1771 files in other folders)
